# s21_ussur_maze

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  env.sh  env.txt
libmaze/: CMakeLists.txt
maze/: CMakeLists.txt
maze/include/libmaze/: a_star.h  cell_pos.h  cell_struct.h  directions_struct.h  ellers_offthread_generator.h  ellers_resources.h  error.h  maze.h  maze_struct.h  util.h  vec_size_t.h
maze/src/: a_star.c  cell_pos.c  eller.c  ellers_algorithm.c  ellers_offthread_generator.c  ellers_resources.c  maze.c  vec_size_t.c
maze/src/a_star/: a_star.c
maze/src/ellers/: ellers_algorithm.c
maze/src/maze/: general.c  printing.c  serialization.c
maze_gtk/: CMakeLists.txt
maze_gtk/resources/: main.glade  resources.xml
maze_gtk/src/: main.c
mazegtk/: CMakeLists.txt
mazegtk/include/mazegtk/: domain.h  dumb_oop.h  error_list.h  maze_app.h  model.h  vec_g_error.h  viewmodel.h  viewmodel_state.h
mazegtk/include/mazegtk/controller/: camera.h  controller.h  maze.h  maze_gen.h
mazegtk/include/mazegtk/model/: camera.h  model.h  vector2.h
mazegtk/include/mazegtk/util/: common_macros.h  domain.h  error_list.h  getref.h  result.h  vec_g_error.h  vector2.h
mazegtk/include/mazegtk/view/: gtk_view.h  gtk_view_inner.h  maze_ssbo.h
mazegtk/include/mazegtk/view_gtk/: camera_controls_view.h  camera_settings_view.h  dropdown_view.h  grabby_cursor_view.h  gtk_view.h  gtk_view_inner.h  maze_gen_view.h  maze_ssbo.h  render_settings_store.h  ui_update_macros.h
mazegtk/include/mazegtk/view_gtk/subviews/: camera_controls_view.h  camera_keyboard_view.h  camera_mouse_view.h  camera_settings_view.h  dropdown_view.h  gl_maze_view.h  grabby_cursor_view.h  maze_gen_view.h  maze_info_view.h  render_settings_view.h  ui_update_macros.h
mazegtk/resources/: .gitignore  basic.frag  common.vert  main.glade  main.glade~  post_processing.frag  resources.xml  style.css
mazegtk/src/: error_list.c  main.c  maze_app.c  maze_app_create.c  vec_g_error.c  viewmodel.c  viewmodel_state.c
mazegtk/src/controller/: camera.c  controller.c  maze.c  maze_gen.c
mazegtk/src/model/: camera.c  model.c
mazegtk/src/util/: error_list.c  vec_g_error.c
mazegtk/src/view/: camera_controls_input.c  camera_ui_input.c  dropdown_controls.c  grabby_cursor.c  gtk_view.c  gtk_view_create.c  gtk_view_free.c  gtk_view_gl_area.c  gtk_view_gl_realize.c  gtk_view_inner.c  maze_ssbo.c  mouse_controls.c
mazegtk/src/view_gtk/: camera_controls_view.c  camera_settings_view.c  dropdown_view.c  grabby_cursor_view.c  gtk_view.c  gtk_view_create.c  gtk_view_gl_area.c  gtk_view_inner.c  maze_gen_view.c  maze_ssbo.c  mouse_controls.c  render.c  update_ui.c
mazegtk/src/view_gtk/subviews/: camera_controls_view.c  camera_keyboard_view.c  camera_mouse_view.c  camera_settings_view.c  dropdown_view.c  gl_maze_view.c  grabby_cursor_view.c  maze_gen_view.c  maze_info_view.c  render_settings_view.c
opengl_utils/: CMakeLists.txt
opengl_utils/include/opengl_utils/: framebuffer.h  gl_program.h  mesh.h  shader.h
opengl_utils/src/: framebuffer.c  gl_program.c  mesh.c  shader.c
tests/: CMakeLists.txt
tests/src/: a_star.cpp  test.cpp
